[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aam-v1-agent-guard"
version = "1.0.0"
description = "AAM-V1: Topological Telemetry and Evidence-Based Runtime for Long-Horizon Autonomous Agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Andrey A. Artsybashev", email = "a50kv109@gmail.com"}]
keywords = ["agents", "llm", "reliability", "loop-detection", "runtime-guard"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/a50kv109/aam-v1-agent-guard"
Documentation = "https://github.com/a50kv109/aam-v1-agent-guard#readme"
Repository = "https://github.com/a50kv109/aam-v1-agent-guard.git"
Issues = "https://github.com/a50kv109/aam-v1-agent-guard/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]
all = [
    "numpy>=1.24",
    "prometheus-client>=0.17",
]

[tool.setuptools]
packages = ["aam_v1"]
package-dir = {"aam_v1" = "src/aam_v1"}

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "benchmark: Benchmark tests",
]
